--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,19 +4,20 @@
 
 <web-app>
   <display-name>Archetype Created Web Application</display-name>
-  
-  <servlet>
-		<servlet-name>serlvet</servlet-name>
+
+<servlet>
+		<servlet-name>jerseyserlvet</servlet-name>
 		<servlet-class>com.sun.jersey.spi.container.servlet.ServletContainer</servlet-class>
 		<init-param>
-		     <param-name>com.sun.jersey.config.property.packages</param-name>
-		     <param-value>com.scp.Controller</param-value>
+			<param-name>com.sun.jersey.config.property.packages</param-name>
+			<param-value>com.scp.Controller</param-value>
 		</init-param>
+		<load-on-startup>1</load-on-startup>
 	</servlet>
 
 	<servlet-mapping>
-		<servlet-name>serlvet</servlet-name>
+		<servlet-name>jerseyserlvet</servlet-name>
 		<url-pattern>/*</url-pattern>
 	</servlet-mapping>
-  
+
 </web-app>
